--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -10,6 +10,12 @@
     <height>800</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>800</width>
+    <height>600</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
@@ -43,7 +49,7 @@
        </size>
       </property>
       <layout class="QGridLayout" name="gridLayout">
-       <item row="5" column="0">
+       <item row="6" column="0">
         <spacer name="verticalSpacer">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -55,23 +61,6 @@
           </size>
          </property>
         </spacer>
-       </item>
-       <item row="0" column="1">
-        <widget class="QComboBox" name="deviceComboBox">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="deviceLabel">
-         <property name="text">
-          <string>device:</string>
-         </property>
-        </widget>
        </item>
        <item row="2" column="1">
         <widget class="QComboBox" name="resolutionComboBox">
@@ -90,6 +79,13 @@
          </property>
         </widget>
        </item>
+       <item row="3" column="0">
+        <widget class="QLabel" name="formatLabel">
+         <property name="text">
+          <string>format:</string>
+         </property>
+        </widget>
+       </item>
        <item row="3" column="1">
         <widget class="QComboBox" name="formatComboBox">
          <property name="sizePolicy">
@@ -100,10 +96,27 @@
          </property>
         </widget>
        </item>
-       <item row="3" column="0">
-        <widget class="QLabel" name="formatLabel">
+       <item row="5" column="0">
+        <widget class="QPushButton" name="settingBtn">
          <property name="text">
-          <string>format:</string>
+          <string>settings</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QComboBox" name="deviceComboBox">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0">
+        <widget class="QLabel" name="deviceLabel">
+         <property name="text">
+          <string>device:</string>
          </property>
         </widget>
        </item>
@@ -115,11 +128,14 @@
         </widget>
        </item>
        <item row="4" column="0">
-        <widget class="QPushButton" name="settingBtn">
+        <widget class="QLabel" name="methodLabel">
          <property name="text">
-          <string>settings</string>
+          <string>method</string>
          </property>
         </widget>
+       </item>
+       <item row="4" column="1">
+        <widget class="QComboBox" name="methodComboBox"/>
        </item>
       </layout>
      </widget>
